syntax = "proto3"; 

package product;


service Product {
  rpc CreateProduct (ProductItem) returns (ProductItem);
  rpc ReadProduct (ProductId) returns (ProductItem);
  rpc ReadProducts (VoidParam) returns (ProductItems);
  rpc UpdateProduct(ProductItem) returns (ProductItem);
  rpc DeleteProduct (ProductId) returns (DeleteProductResponse);

   // New streaming method for real-time updates
  rpc streamProductEvents (ProductItem) returns (stream ProductEvent);
  rpc StreamCouponUpdates(CouponUpdateRequest) returns (stream CouponUpdateResponse);

  
}

message CouponUpdateRequest {
  string couponCode = 1;
  string businessId = 2;
}


message CouponUpdateResponse {
  string type = 1;
  string couponCode = 2;
  string businessId = 3;
  string status = 4;
  string expiryDate = 5;
  int32 totalCoupons = 6;
  int32 remainingCoupons = 7;
  string businessName = 8;
  string message = 9;
}


message VoidParam {}

message ProductId {
  int32 id = 1;
}

message ProductEvent {
  string eventType = 1;
  ProductItem product = 2;
}



enum  Category {
  SMARTPHONE = 0;
  CAMERA = 1;
  LAPTOPS = 2;
  HEADPHONES = 3;
  CHARGERS = 4;
  SPEAKERS = 5;
  TELEVISIONS = 6;
  MODEMS = 7;
  KEYBOARDs = 8;
  MICROPHONES = 9;
}
message ProductItem {
  int32 id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  Category category = 5;
  int32 quantity = 6;
}

message ProductItems {
  repeated ProductItem products = 1;
}

message DeleteProductResponse {
  bool deleted = 1;
}